added now photo

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,10 @@ body {
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
+  background-image: url("/popcorn.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  color: black;
 }
 
 .movie-director {
@@ -22,7 +26,7 @@ body {
 }
 
 .saved-list {
-  background-color: #fff;
+  background-color: #535252;
   border: 0;
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
@@ -44,7 +48,7 @@ body {
   margin: 0 10px;
 }
 .saved-active {
-  color: blue;
+  color: #fffff0;
   border: 1px solid grey;
   padding: 5px;
 }
